working on main page

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "flowgrammer",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.4.1",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "method-override": "^2.3.5",
+    "mongoose": "^4.4.12"
   }
 }
