--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "method-override": "^2.3.5",
-    "mongoose": "^4.4.12"
+    "mongoose": "^4.4.12",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   }
 }
