--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "flowgrammer",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
