--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.0",
     "connect-busboy": "0.0.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.2.0",
     "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
@@ -23,6 +24,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
+    "pbkdf2-password": "^1.1.0",
+    "session-file-store": "^0.2.0",
     "xlsx": "^0.8.0"
   }
 }
